Add about notebook for each node

--- a/beaglebone/about.ipynb
+++ b/beaglebone/about.ipynb
@@ -9,15 +9,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sys.version:\n",
-      "3.5.2 (default, Oct  8 2019, 13:06:37) \n",
-      "[GCC 5.4.0 20160609]\n"
+      "2020-02-25T20:28:23-05:00\n",
+      "\n",
+      "CPython 3.8.1\n",
+      "IPython 7.12.0\n",
+      "\n",
+      "compiler   : GCC 5.4.0 20160609\n",
+      "system     : Linux\n",
+      "release    : 4.9.54-ti-r68\n",
+      "machine    : armv7l\n",
+      "processor  : armv7l\n",
+      "CPU cores  : 1\n",
+      "interpreter: 32bit\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "print('sys.version:\\n{}'.format(sys.version))"
+    "%load_ext watermark\n",
+    "%watermark"
    ]
   },
   {
@@ -26,18 +35,24 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "sys.version_info(major=3, minor=5, micro=2, releaselevel='final', serial=0)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "node      = beaglebone\n",
+      "system    = Linux\n",
+      "processor = armv7l\n",
+      "release   = 4.9.54-ti-r68\n",
+      "version   = #1 SMP PREEMPT Tue Oct 10 10:05:30 UTC 2017\n"
+     ]
     }
    ],
    "source": [
-    "sys.version_info\n"
+    "import platform\n",
+    "print(f\"\"\"node      = {platform.uname().node}\n",
+    "system    = {platform.uname().system}\n",
+    "processor = {platform.uname().processor}\n",
+    "release   = {platform.uname().release}\n",
+    "version   = {platform.uname().version}\"\"\")"
    ]
   },
   {
@@ -49,9 +64,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.5/dist-packages\n",
-      "/usr/lib/python3/dist-packages\n",
-      "/usr/lib/python3.5/dist-packages\n"
+      "sys.version:\n",
+      "3.8.1 (default, Feb 16 2020, 07:48:05) \n",
+      "[GCC 5.4.0 20160609]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(f'sys.version:\\n{sys.version}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/jupyter/.venv/lib/python3.8/site-packages\n"
      ]
     }
    ],
@@ -63,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,13 +114,6 @@
     "GPIO.output(\"P8_10\", GPIO.HIGH)\n",
     "GPIO.cleanup()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -106,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
