--- a/pi05/about2.ipynb
+++ b/pi05/about2.ipynb
@@ -1,22 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Only need to do this to import the linux-metrics and watermark modules\n",
-    "Note that this is the best way to install a module from inside a notebook \n",
-    "\n",
-    "```python\n",
-    "import sys\n",
-    "!{sys.executable} -m pip install linux-metrics\n",
-    "!(sys.executable) -m pip install watermark\n",
-    "```\n",
-    "\n",
-    "See https://jakevdp.github.io/blog/2017/12/05/installing-python-packages-from-jupyter/"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -25,14 +9,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-02-23T19:49:40-05:00\n",
+      "2020-02-16T21:44:52-05:00\n",
       "\n",
       "CPython 3.8.1\n",
       "IPython 7.12.0\n",
       "\n",
       "compiler   : GCC 6.3.0 20170516\n",
       "system     : Linux\n",
-      "release    : 4.19.66-v7+\n",
+      "release    : 4.9.35-v7+\n",
       "machine    : armv7l\n",
       "processor  : \n",
       "CPU cores  : 4\n",
@@ -49,9 +33,22 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sys.executable = /home/pi/jupyter/.venv/bin/python\n",
+      "sys.version:\n",
+      "3.8.1 (default, Feb 16 2020, 18:31:52) \n",
+      "[GCC 6.3.0 20170516]\n"
+     ]
+    }
+   ],
    "source": [
-    "import linux_metrics as lm"
+    "import sys\n",
+    "print('sys.executable = {}'.format(sys.executable))\n",
+    "print('sys.version:\\n{}'.format(sys.version))"
    ]
   },
   {
@@ -63,15 +60,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "procs running: 4\n",
-      "cpu utilization: 26.88%\n",
+      "/home/pi/jupyter/.venv/lib/python3.8/site-packages\n"
+     ]
+    }
+   ],
+   "source": [
+    "import site\n",
+    "for p in site.getsitepackages():\n",
+    "    print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import linux_metrics as lm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "procs running: 3\n",
+      "cpu utilization: 50.63%\n",
       "disk busy: 0.0%\n",
-      "disk reads: 28419\n",
-      "disk writes: 11756\n",
-      "mem used: 438829056\n",
-      "mem total: 917016576\n",
-      "net bits received: 780366832\n",
-      "net bits sent: 683169968\n"
+      "disk reads: 6927\n",
+      "disk writes: 415\n",
+      "mem used: 426110976\n",
+      "mem total: 768647168\n",
+      "net bits received: 0\n",
+      "net bits sent: 0\n"
      ]
     }
    ],
@@ -95,8 +120,7 @@
     "# network\n",
     "rx_bits, tx_bits = lm.net_stat.rx_tx_bits('eth0')\n",
     "print('net bits received: %s' % rx_bits)\n",
-    "print('net bits sent: %s' % tx_bits)\n",
-    "\n"
+    "print('net bits sent: %s' % tx_bits)"
    ]
   },
   {
