--- a/pi07/about.ipynb
+++ b/pi07/about.ipynb
@@ -2,24 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sys.executable = /home/pi/jupyter/.venv/bin/python\n",
-      "sys.version:\n",
-      "3.8.1 (default, Feb 16 2020, 15:40:33) \n",
-      "[GCC 6.3.0 20170516]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import sys\n",
-    "print('sys.executable = {}'.format(sys.executable))\n",
-    "print('sys.version:\\n{}'.format(sys.version))"
+    "%load_ext watermark\n",
+    "%watermark"
    ]
   },
   {
@@ -27,7 +15,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import platform\n",
+    "print(f\"\"\"node      = {platform.uname().node}\n",
+    "system    = {platform.uname().system}\n",
+    "processor = {platform.uname().processor}\n",
+    "release   = {platform.uname().release}\n",
+    "version   = {platform.uname().version}\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "print(f'sys.version:\\n{sys.version}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import site\n",
+    "for p in site.getsitepackages():\n",
+    "    print(p)"
+   ]
   }
  ],
  "metadata": {
