--- a/centos1/about.ipynb
+++ b/centos1/about.ipynb
@@ -2,9 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-02-25T20:39:42-05:00\n",
+      "\n",
+      "CPython 3.8.1\n",
+      "IPython 7.12.0\n",
+      "\n",
+      "compiler   : GCC 8.3.1 20190311 (Red Hat 8.3.1-3)\n",
+      "system     : Linux\n",
+      "release    : 4.15.0-23-generic\n",
+      "machine    : x86_64\n",
+      "processor  : x86_64\n",
+      "CPU cores  : 8\n",
+      "interpreter: 64bit\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext watermark\n",
     "%watermark"
@@ -12,9 +31,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "node      = centos1\n",
+      "system    = Linux\n",
+      "processor = x86_64\n",
+      "release   = 4.15.0-23-generic\n",
+      "version   = #25-Ubuntu SMP Wed May 23 18:02:16 UTC 2018\n"
+     ]
+    }
+   ],
    "source": [
     "import platform\n",
     "print(f\"\"\"node      = {platform.uname().node}\n",
@@ -26,9 +57,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sys.version:\n",
+      "3.8.1 (default, Feb 16 2020, 08:20:53) \n",
+      "[GCC 8.3.1 20190311 (Red Hat 8.3.1-3)]\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "print(f'sys.version:\\n{sys.version}')"
@@ -36,9 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/app1/jupyter/.venv/lib/python3.8/site-packages\n"
+     ]
+    }
+   ],
    "source": [
     "import site\n",
     "for p in site.getsitepackages():\n",
