--- a/pi09/about.ipynb
+++ b/pi09/about.ipynb
@@ -2,9 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-02-25T20:43:24-05:00\n",
+      "\n",
+      "CPython 3.8.1\n",
+      "IPython 7.12.0\n",
+      "\n",
+      "compiler   : GCC 6.3.0 20170516\n",
+      "system     : Linux\n",
+      "release    : 4.19.66-v7+\n",
+      "machine    : armv7l\n",
+      "processor  : \n",
+      "CPU cores  : 4\n",
+      "interpreter: 32bit\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext watermark\n",
     "%watermark"
@@ -12,9 +31,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "node      = pi09\n",
+      "system    = Linux\n",
+      "processor = \n",
+      "release   = 4.19.66-v7+\n",
+      "version   = #1253 SMP Thu Aug 15 11:49:46 BST 2019\n"
+     ]
+    }
+   ],
    "source": [
     "import platform\n",
     "print(f\"\"\"node      = {platform.uname().node}\n",
@@ -26,9 +57,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sys.version:\n",
+      "3.8.1 (default, Feb 16 2020, 19:09:23) \n",
+      "[GCC 6.3.0 20170516]\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "print(f'sys.version:\\n{sys.version}')"
@@ -36,9 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/pi/jupyter/.venv/lib/python3.8/site-packages\n"
+     ]
+    }
+   ],
    "source": [
     "import site\n",
     "for p in site.getsitepackages():\n",
