--- a/pi04/about.ipynb
+++ b/pi04/about.ipynb
@@ -9,14 +9,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-02-25T20:31:39-05:00\n",
+      "2020-05-18T08:40:21-04:00\n",
       "\n",
       "CPython 3.8.1\n",
-      "IPython 7.12.0\n",
+      "IPython 7.14.0\n",
       "\n",
       "compiler   : GCC 6.3.0 20170516\n",
       "system     : Linux\n",
-      "release    : 4.9.35-v7+\n",
+      "release    : 4.19.97-v7+\n",
       "machine    : armv7l\n",
       "processor  : \n",
       "CPU cores  : 4\n",
@@ -41,8 +41,8 @@
       "node      = pi04\n",
       "system    = Linux\n",
       "processor = \n",
-      "release   = 4.9.35-v7+\n",
-      "version   = #1014 SMP Fri Jun 30 14:47:43 BST 2017\n"
+      "release   = 4.19.97-v7+\n",
+      "version   = #1294 SMP Thu Jan 30 13:15:58 GMT 2020\n"
      ]
     }
    ],
