--- a/pi07/about.ipynb
+++ b/pi07/about.ipynb
@@ -9,14 +9,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-02-25T20:58:20-05:00\n",
+      "2020-05-18T09:20:14-04:00\n",
       "\n",
-      "CPython 3.8.1\n",
-      "IPython 7.12.0\n",
+      "CPython 3.7.3\n",
+      "IPython 7.14.0\n",
       "\n",
-      "compiler   : GCC 6.3.0 20170516\n",
+      "compiler   : GCC 8.3.0\n",
       "system     : Linux\n",
-      "release    : 4.9.35-v7+\n",
+      "release    : 4.19.97-v7+\n",
       "machine    : armv7l\n",
       "processor  : \n",
       "CPU cores  : 4\n",
@@ -41,8 +41,8 @@
       "node      = pi07\n",
       "system    = Linux\n",
       "processor = \n",
-      "release   = 4.9.35-v7+\n",
-      "version   = #1014 SMP Fri Jun 30 14:47:43 BST 2017\n"
+      "release   = 4.19.97-v7+\n",
+      "version   = #1294 SMP Thu Jan 30 13:15:58 GMT 2020\n"
      ]
     }
    ],
@@ -64,15 +64,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "sys.executable = /home/pi/jupyter/pi07/.venv/bin/python\n",
       "sys.version:\n",
-      "3.8.1 (default, Feb 16 2020, 15:40:33) \n",
-      "[GCC 6.3.0 20170516]\n"
+      "3.7.3 (default, Dec 20 2019, 18:57:59) \n",
+      "[GCC 8.3.0]\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
-    "print(f'sys.version:\\n{sys.version}')"
+    "print('sys.executable = {}'.format(sys.executable))\n",
+    "print('sys.version:\\n{}'.format(sys.version))"
    ]
   },
   {
@@ -84,7 +86,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/pi/jupyter/.venv/lib/python3.8/site-packages\n"
+      "/home/pi/jupyter/pi07/.venv/lib/python3.7/site-packages\n",
+      "/home/pi/jupyter/pi07/.venv/local/lib/python3.7/dist-packages\n",
+      "/home/pi/jupyter/pi07/.venv/lib/python3/dist-packages\n",
+      "/home/pi/jupyter/pi07/.venv/lib/python3.7/dist-packages\n"
      ]
     }
    ],
@@ -93,6 +98,13 @@
     "for p in site.getsitepackages():\n",
     "    print(p)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -111,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
