--- a/pi05/about2.ipynb
+++ b/pi05/about2.ipynb
@@ -9,14 +9,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-02-25T20:51:25-05:00\n",
+      "2020-05-18T10:17:03-04:00\n",
       "\n",
-      "CPython 3.8.1\n",
-      "IPython 7.12.0\n",
+      "CPython 3.8.2\n",
+      "IPython 7.14.0\n",
       "\n",
-      "compiler   : GCC 6.3.0 20170516\n",
+      "compiler   : GCC 8.3.0\n",
       "system     : Linux\n",
-      "release    : 4.9.35-v7+\n",
+      "release    : 4.19.97-v7+\n",
       "machine    : armv7l\n",
       "processor  : \n",
       "CPU cores  : 4\n",
@@ -38,10 +38,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sys.executable = /home/pi/jupyter/.venv/bin/python\n",
+      "sys.executable = /home/pi/jupyter/pi05/.venv/bin/python\n",
       "sys.version:\n",
-      "3.8.1 (default, Feb 16 2020, 18:31:52) \n",
-      "[GCC 6.3.0 20170516]\n"
+      "3.8.2 (default, Apr 14 2020, 13:15:14) \n",
+      "[GCC 8.3.0]\n"
      ]
     }
    ],
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/pi/jupyter/.venv/lib/python3.8/site-packages\n"
+      "/home/pi/jupyter/pi05/.venv/lib/python3.8/site-packages\n"
      ]
     }
    ],
@@ -88,13 +88,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "procs running: 3\n",
-      "cpu utilization: 26.13%\n",
+      "procs running: 4\n",
+      "cpu utilization: 34.16%\n",
       "disk busy: 0.0%\n",
-      "disk reads: 8651\n",
-      "disk writes: 16813\n",
-      "mem used: 360128512\n",
-      "mem total: 768647168\n",
+      "disk reads: 36009\n",
+      "disk writes: 33857\n",
+      "mem used: 437374976\n",
+      "mem total: 783970304\n",
       "net bits received: 0\n",
       "net bits sent: 0\n"
      ]
@@ -147,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
