--- a/pi09/about.ipynb
+++ b/pi09/about.ipynb
@@ -9,14 +9,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-02-25T20:43:24-05:00\n",
+      "2020-05-18T10:33:26-04:00\n",
       "\n",
-      "CPython 3.8.1\n",
-      "IPython 7.12.0\n",
+      "CPython 3.7.3\n",
+      "IPython 7.14.0\n",
       "\n",
-      "compiler   : GCC 6.3.0 20170516\n",
+      "compiler   : GCC 8.3.0\n",
       "system     : Linux\n",
-      "release    : 4.19.66-v7+\n",
+      "release    : 4.19.97-v7+\n",
       "machine    : armv7l\n",
       "processor  : \n",
       "CPU cores  : 4\n",
@@ -41,8 +41,8 @@
       "node      = pi09\n",
       "system    = Linux\n",
       "processor = \n",
-      "release   = 4.19.66-v7+\n",
-      "version   = #1253 SMP Thu Aug 15 11:49:46 BST 2019\n"
+      "release   = 4.19.97-v7+\n",
+      "version   = #1294 SMP Thu Jan 30 13:15:58 GMT 2020\n"
      ]
     }
    ],
@@ -65,8 +65,8 @@
      "output_type": "stream",
      "text": [
       "sys.version:\n",
-      "3.8.1 (default, Feb 16 2020, 19:09:23) \n",
-      "[GCC 6.3.0 20170516]\n"
+      "3.7.3 (default, Dec 20 2019, 18:57:59) \n",
+      "[GCC 8.3.0]\n"
      ]
     }
    ],
@@ -84,7 +84,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/pi/jupyter/.venv/lib/python3.8/site-packages\n"
+      "/home/pi/jupyter/pi09/.venv/lib/python3.7/site-packages\n",
+      "/home/pi/jupyter/pi09/.venv/local/lib/python3.7/dist-packages\n",
+      "/home/pi/jupyter/pi09/.venv/lib/python3/dist-packages\n",
+      "/home/pi/jupyter/pi09/.venv/lib/python3.7/dist-packages\n"
      ]
     }
    ],
@@ -93,6 +96,13 @@
     "for p in site.getsitepackages():\n",
     "    print(p)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -111,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
