--- a/beaglebone/about.ipynb
+++ b/beaglebone/about.ipynb
@@ -9,18 +9,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-02-25T20:28:23-05:00\n",
+      "Last updated: 2020-12-01T22:00:39.132178-05:00\n",
       "\n",
-      "CPython 3.8.1\n",
-      "IPython 7.12.0\n",
+      "Python implementation: CPython\n",
+      "Python version       : 3.8.1\n",
+      "IPython version      : 7.19.0\n",
       "\n",
-      "compiler   : GCC 5.4.0 20160609\n",
-      "system     : Linux\n",
-      "release    : 4.9.54-ti-r68\n",
-      "machine    : armv7l\n",
-      "processor  : armv7l\n",
-      "CPU cores  : 1\n",
-      "interpreter: 32bit\n"
+      "Compiler    : GCC 5.4.0 20160609\n",
+      "OS          : Linux\n",
+      "Release     : 4.9.54-ti-r68\n",
+      "Machine     : armv7l\n",
+      "Processor   : armv7l\n",
+      "CPU cores   : 1\n",
+      "Architecture: 32bit\n",
+      "\n"
      ]
     }
    ],
@@ -114,6 +116,13 @@
     "GPIO.output(\"P8_10\", GPIO.HIGH)\n",
     "GPIO.cleanup()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
