Add more to centos9a

--- a/centos9a-husky/about.ipynb
+++ b/centos9a-husky/about.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last updated: 2023-09-15T08:00:18.031366-04:00\n",
+      "Last updated: 2023-09-15T20:03:18.065134-04:00\n",
       "\n",
       "Python implementation: CPython\n",
       "Python version       : 3.9.17\n",
@@ -30,6 +30,79 @@
     "%load_ext watermark\n",
     "%watermark"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "node      = centos9a\n",
+      "system    = Linux\n",
+      "processor = x86_64\n",
+      "release   = 5.14.0-364.el9.x86_64\n",
+      "version   = #1 SMP PREEMPT_DYNAMIC Fri Sep 8 19:51:25 UTC 2023\n"
+     ]
+    }
+   ],
+   "source": [
+    "import platform\n",
+    "print(f\"\"\"node      = {platform.uname().node}\n",
+    "system    = {platform.uname().system}\n",
+    "processor = {platform.uname().processor}\n",
+    "release   = {platform.uname().release}\n",
+    "version   = {platform.uname().version}\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sys.version:\n",
+      "3.9.17 (main, Aug  9 2023, 00:00:00) \n",
+      "[GCC 11.4.1 20230605 (Red Hat 11.4.1-2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(f'sys.version:\\n{sys.version}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/egan/jupyter/centos9a-husky/.venv/lib64/python3.9/site-packages\n",
+      "/home/egan/jupyter/centos9a-husky/.venv/lib/python3.9/site-packages\n"
+     ]
+    }
+   ],
+   "source": [
+    "import site\n",
+    "for p in site.getsitepackages():\n",
+    "    print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
